tests/ui/typeck/function_calls/type_conversion_wrong_arg_count.sol
//@ compile-flags: -Ztypeck
contract test {
    function f() public {
        uint(1, 1); //~ ERROR: expected exactly one unnamed argument
    }
}
